--- a/WordPressAutomation/WordPressAutomation.csproj
+++ b/WordPressAutomation/WordPressAutomation.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DashboardPage.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
