Creating Page Test and others Page Objects

--- a/WordPressTests/WordPressTests.csproj
+++ b/WordPressTests/WordPressTests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="CreatePostTests.cs" />
     <Compile Include="LoginTest.cs" />
+    <Compile Include="PageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
