--- a/WordPressAutomation/WordPressAutomation.csproj
+++ b/WordPressAutomation/WordPressAutomation.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="DashboardPage.cs" />
     <Compile Include="Driver.cs" />
+    <Compile Include="ListPostsPage.cs" />
     <Compile Include="LoginPage.cs" />
     <Compile Include="NewPostPage.cs" />
     <Compile Include="PostPage.cs" />
