--- a/WordPressAutomation/WordPressAutomation.csproj
+++ b/WordPressAutomation/WordPressAutomation.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Navigation\MenuSelector.cs" />
     <Compile Include="Pages\NewPostPage.cs" />
     <Compile Include="Pages\PostPage.cs" />
+    <Compile Include="Workflows\PostCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
